helm/myapp/myapp-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: myapp-db
